--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-PyPDF2
-openai
-langchain
-streamlit
-faiss-cpu
+langchain==0.1.16
+PyPDF2==3.0.1
+python-dotenv==1.0.1
+streamlit==1.30.0
+streamlit==1.33.0
+tiktoken == 0.6.0
